0.02
 - Move check_array_object() to Mo::utils::Array.

0.01 2025-07-10T22:21:40+02:00
 - First version.